--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ header {
 header > h1 {
     text-align: center;
     align-self: center;
-    padding: 132px 0;
+    padding: 114px 0;
     font-family: 'Black Ops One', sans-serif;
 }
 
@@ -44,6 +44,7 @@ nav {
 
 img[src*="LHR-Grading"] {
     position: absolute;
+    top: 6px;
     left: var(--size-20);
     width: 6%;
 }
@@ -54,7 +55,11 @@ ul {
     padding: 0;
 }
 
-ul > li { display: block; }
+ul > li {
+    display: block;
+    font-size: var(--size-18);
+    text-align: center;
+}
 
 a:link { text-decoration: none; }
 a:hover { text-decoration: underline; }
@@ -72,13 +77,14 @@ a:hover { text-decoration: underline; }
 
 .products > h2 {
     text-align: center;
+    padding-bottom: 40px;
 }
 
 .products > h2::before, h2::after {
     display: inline-block;
     content: "";
     border-top: .1rem solid black;
-    width: 10rem;
+    width: 8rem;
     margin: 0 1rem;
     transform: translateY(-0.5rem);
 }
@@ -96,7 +102,7 @@ a:hover { text-decoration: underline; }
     display: inline-block;
     content: "";
     border-top: .1rem solid black;
-    width: 10rem;
+    width: 8rem;
     margin: 0 1rem;
     transform: translateY(-0.5rem);
 }
@@ -125,6 +131,8 @@ a:hover { text-decoration: underline; }
     /*padding: 10px 30px;*/
     /*position: relative;*/
 }
+
+.before > h3 { text-align: center; }
 
 .services-container {
     padding-bottom: 40px;
@@ -193,7 +201,7 @@ footer .footer-top {
 
 footer .footer-col {
     justify-self: center;
-    max-width: 269px;
+    max-width: 286px;
 }
 
 .footer-top h4 {
@@ -355,5 +363,5 @@ img[src*="mobile"] {
 img[src*="DOC"] {
     display: initial;
     position: relative;
-    width: 3%;
+    width: 2%;
 }
