--- a/css/responsive.css
+++ b/css/responsive.css
@@ -151,15 +151,27 @@
 
     .services-container { padding-bottom: 100px; }
 
+    .services-block {
+        position: relative;
+        top: 10%;
+    }
+
     .desktop { bottom: initial; }
 
     .mobile-landscape { display: none; }
 
     .mobile { display: initial; }
 
-    .before-after { padding: 10px 20px; }
+    .before-after {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 5ch;
+        padding: 10px 20px;
+    }
 
     .before-wrapper, .after-wrapper { display: initial; }
+
+    .card { width: 100%; }
 
     img[src*="DOC"] {
         width: 7%;
@@ -185,7 +197,7 @@
     /*.before-after { padding: 10px 20px; }*/
 
     .products > h2::before, h2::after { width: 6rem; }
-    .services > h2::before, h2::after { width: 6rem; }
+    .services > div > h2::before, h2::after { width: 6rem; }
 
 }
 
