--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,11 @@ body {
     margin: auto;
     grid-template-areas: "nav nav"
     "header header"
+    "welcome welcome"
     "products products"
     "services services"
     "footer footer";
-    grid-template-rows: 80px 300px 1600px 400px 222px;
+    grid-template-rows: 80px 300px auto 2100px 400px 222px;
     grid-template-columns: 1fr 3fr;
 }
 
@@ -71,6 +72,29 @@ a:hover { text-decoration: underline; }
 .info {
     grid-area: info;
     background-color: brown;
+}
+
+.welcome {
+    /*grid-area: welcome;*/
+    /*background-color: orangered;*/
+    position: relative;
+    bottom: 150px;
+}
+
+.products > h1 {
+    padding: 60px 0;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Black Ops One', sans-serif;
+}
+
+.products > p {
+    text-align: left;
+    padding: 0 20px 80px 20px;
+    font-size: 18px;
+    font-weight: 600;
+    /*text-indent: 50px;*/
+    text-align: center;
 }
 
 .products {
